Added DAVID to best hacker's quotes
Thanks

--- a/bestide.html
+++ b/bestide.html
@@ -11,6 +11,8 @@ a:hover{color: yellow;}
 	<h1>The Ultimate Python Guide - Best IDE</h1>
 	<br>
 	<p>Some of the best programmers in the world answered this very question</p>
+	<p style="text-align: right;padding-right: 10%"><i>"There is no "best" IDE it depends on<br>your needs and work style"<br></i>
+		DAVID</p>
 	<p style="text-align: right;padding-right: 10%"><i>"None. Use Emacs/Vim"<br></i>
 		Robby O'Connor</p>
 	<p style="text-align: right;padding-right: 10%"><i>"<a href="http://ninja-ide.org">Ninja IDE</a> is nice"<br></i>
