--- a/bestide.html
+++ b/bestide.html
@@ -11,7 +11,7 @@ a:hover{color: yellow;}
 	<h1>The Ultimate Python Guide - Best IDE</h1>
 	<br>
 	<p>Some of the best programmers in the world answered this very question</p>
-	<p style="text-align: right;padding-right: 10%"><i>"There is no "best" IDE it depends on<br>your needs and work style"<br></i>
+	<p style="text-align: right;padding-right: 10%"><i>"There is no "best" IDE it depends on your needs and work style"<br></i>
 		DAVID</p>
 	<p style="text-align: right;padding-right: 10%"><i>"None. Use Emacs/Vim"<br></i>
 		Robby O'Connor</p>
