Removed ~ at the end of some lines

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@ a:hover{color: yellow;}
 <a href="hackfacebook.html" onmouseover="set('Real tips from real hackers')">How can I hack Facebook with Python?</a>
 <br>
 <a href="bestide.html" onmouseover="set('Once and for all, THE BEST IDE')">What is the best IDE?</a> ~
-<a href="bestway.html" onmouseover="set('Some tips')">The best way to learn Python?</a> ~
+<a href="bestway.html" onmouseover="set('Some tips')">The best way to learn Python?</a>
 <!-- <a href="#" onmouseover="set('Fasten your seat belts')">How to master Python?</a> -->
 <br>
-<a href="freebooks.html" onmouseover="set('The truth about free books')">Free paid Python books?</a> ~
+<a href="freebooks.html" onmouseover="set('The truth about free books')">Free paid Python books?</a>
 <!--
 <a onmouseover="set('Hail teachers from India!')">Youtube Tutorials</a>
 <br>
