added some <b> tags in PAID BOOKS

--- a/freebooks.html
+++ b/freebooks.html
@@ -26,9 +26,9 @@ a:hover{color: yellow;}
 		<a href="http://neuralnetworksanddeeplearning.com/" target="_blank">http://neuralnetworksanddeeplearning.com/</a></p>
 	<div style="background-color: gray; margin: auto"><h2>Paid books</h2></div>
 	<h3>DO NOT ASK FOR THEM IN THE GROUP! THEY ARE NOT FREE!</h3>
-		<p>Introduction to Computation and Programming Using Python by John V. Guttag<br>
+		<p><b>Introduction to Computation and Programming Using Python</b> by John V. Guttag<br>
 		<a href="https://www.amazon.com/Introduction-Computation-Programming-Using-Python/dp/0262519631" target="_blank">https://www.amazon.com/Introduction-Computation-Programming-Using-Python/dp/0262519631</a></p>
-		<p>Demystifying Computers by Achyut S. Godbole<br>
+		<p><b>Demystifying Computers</b> by Achyut S. Godbole<br>
 		<a href="https://www.amazon.com/Demystifying-Computers-Godbole/dp/1259028879" target="_blank">https://www.amazon.com/Demystifying-Computers-Godbole/dp/1259028879</a></p>
 		<a href="index.html">Go back</a>
 </body>
