Separated JS and CSS to different files

--- a/hackfacebook.html
+++ b/hackfacebook.html
@@ -1,11 +1,8 @@
 <html>
 <head>
-<title>The Ultimate Python Guide - Hacking facebook</title>
-<style>
-body{text-align: center;background-color: black;color: white;font-size: +25;line-height: 1.2;}
-a, a:link, a:visited, a:active {color: white; text-decoration: none;}
-a:hover{color: yellow;}
-</style>
+  <script type="text/javascript" src="script.js"></script>
+	<LINK href="style.css" rel="stylesheet" type="text/css">
+  <title>The Ultimate Python Guide - Hacking facebook</title>
 </head>
 <body>
 <h1>The Ultimate Python Guide - Hacking facebook</h1>
