--- a/bestide.html
+++ b/bestide.html
@@ -5,18 +5,21 @@
 	<title>The Ultimate Python Guide - Best IDE</title>
 </head>
 <body>
-	<h1>The Ultimate Python Guide - Best IDE</h1>
-	<br>
-	<p>Some of the best programmers in the world answered this very question</p>
-	<p style="text-align: right;padding-right: 10%"><i>"There is no "best" IDE it depends on your needs and work style"<br></i>
-		DAVID</p>
-	<p style="text-align: right;padding-right: 10%"><i>"None. Use Emacs/Vim"<br></i>
-		Robby O'Connor</p>
-	<p style="text-align: right;padding-right: 10%"><i>"<a href="http://ninja-ide.org">Ninja IDE</a> is nice"<br></i>
-		Kat ^^</p>
-	<p>You can also look here</p>
-	<p><a href="https://stackoverflow.com/questions/81584/what-ide-to-use-for-python/81609#81609" target="_blank">"What ide to use for Python? StackOverflow question"</a></p>
-	<br>
-	<a href="index.html">Go back</a>
+	<div class="container">
+		<h1>The Ultimate Python Guide - Best IDE</h1>
+		<div class="content">
+			<p>Some of the best programmers in the world answered this very question</p>
+			<p style="text-align: right;padding-right: 10%"><i>"There is no "best" IDE it depends on your needs and work style"<br></i>
+				DAVID</p>
+			<p style="text-align: right;padding-right: 10%"><i>"None. Use Emacs/Vim"<br></i>
+				Robby O'Connor</p>
+			<p style="text-align: right;padding-right: 10%"><i>"<a href="http://ninja-ide.org">Ninja IDE</a> is nice"<br></i>
+				Kat ^^</p>
+			<p>You can also look here</p>
+			<p><a href="https://stackoverflow.com/questions/81584/what-ide-to-use-for-python/81609#81609" target="_blank">"What ide to use for Python? StackOverflow question"</a></p>
+			<br>
+			<a href="index.html">Go back</a>
+		</div>
+	</div>
 </body>
 </html>
