--- a/bestway.html
+++ b/bestway.html
@@ -5,14 +5,17 @@
 	<title>The Ultimate Python Guide - Best Way to learn Python</title>
 </head>
 <body>
-<h1>The Ultimate Python Guide - Best Way to learn Python</h1>
-<br>
-<p>Even the best hackers started somewhere, right?</p>
-<p>Hackers usually don't want to share their secrets.<br>
-	One of them, is how did they gain such knowledge?<br>
-	The answer is simple<p>
-<h1><a href="https://docs.python.org/3/" target="_blank">READ THE DOCS</a></h1>
-<br>
-<a href="index.html">Go back</a>
+	<div class="container">
+		<h1>The Ultimate Python Guide - Best Way to learn Python</h1>
+		<div class="content">
+			<p>Even the best hackers started somewhere, right?</p>
+			<p>Hackers usually don't want to share their secrets.<br>
+				One of them, is how did they gain such knowledge?<br>
+				The answer is simple<p>
+			<h1><a href="https://docs.python.org/3/" target="_blank">READ THE DOCS</a></h1>
+			<br>
+			<a href="index.html">Go back</a>
+		</div>
+	</div>
 </body>
 </html>
