--- a/downloadPython.html
+++ b/downloadPython.html
@@ -5,20 +5,24 @@
 	<title>The Ultimate Python Guide - Downloading python</title>
 </head>
 <body>
-<h1>The Ultimate Python Guide - Downloading python</h1>
-<p><i>"Ah so you want to start your journey with Python?"</i></p>
-<br>
-<div style="background-color: gray; margin: auto">
-<b><a href="#" target="_blank" style="font-size: 40">www.python.org/download</a></b>
-</div>	
-<p>and click on a <b style="color: yellow">SHINY</b> button saying "Download python 3.7.2</p>
-<p>Download Python</p>
-<p>It will actually install Python, an IDE, and a lot of standard libraries</p>
-<p>Quick check: press CTRL+R<br>
-	and type "python" (without the quotes)<br>
-	Got an error? You did something wrong.<br>
-	Do you see a black window? Congratulations.</p>
-<br><br>
-<a href="index.html">Go back</a>
+	<div class="container">
+		<h1>The Ultimate Python Guide - Downloading python</h1>
+		<div class="content">
+			<p><i>"Ah so you want to start your journey with Python?"</i></p>
+			<br>
+			<div style="background-color: gray; margin: auto">
+			<b><a href="#" target="_blank" style="font-size: 40">www.python.org/download</a></b>
+			</div>	
+			<p>and click on a <b style="color: yellow">SHINY</b> button saying "Download python 3.7.2</p>
+			<p>Download Python</p>
+			<p>It will actually install Python, an IDE, and a lot of standard libraries</p>
+			<p>Quick check: press CTRL+R<br>
+				and type "python" (without the quotes)<br>
+				Got an error? You did something wrong.<br>
+				Do you see a black window? Congratulations.</p>
+			<br><br>
+			<a href="index.html">Go back</a>
+		</div>
+	</div>
 </body>
 </html>
