--- a/freebooks.html
+++ b/freebooks.html
@@ -5,6 +5,8 @@
 	<title>The Ultimate Python Guide - Free books</title>
 </head>
 <body>
+<div class="container">
+<div class="content">
 	<h1>The Ultimate Python Guide - Free books</h1>
 	<p>Oh, so you are looking for a free book that has a price tag?</p>
 	<p>Sorry, sharing such books online is against the law, it also <br>
@@ -28,6 +30,8 @@
 		<p><b>Demystifying Computers</b> by Achyut S. Godbole<br>
 		<a href="https://www.amazon.com/Demystifying-Computers-Godbole/dp/1259028879" target="_blank">https://www.amazon.com/Demystifying-Computers-Godbole/dp/1259028879</a></p>
 		<a href="index.html">Go back</a>
+</div>
+</div>
 </body>
 </html>
 
