--- a/index.html
+++ b/index.html
@@ -5,27 +5,30 @@
 	<title>The Ultimate Python Guide</title>
 </head>
 <body>
+<div class="container">
 <h1>The Ultimate Python Guide</h1>
-<h2 id="tip">UwU</h2>
-
-<a href="downloadPython.html" onmouseover="set('Basic installation guide')">WHERE CAN I GET PYTHON?</a>
-<br>
-<a href="pp.html" onmouseover="set('Don\'t tell me you closed it before reading...')">How can I see pinned message?</a>
-<br>
-<a href="hackfacebook.html" onmouseover="set('Real tips from real hackers')">How can I hack Facebook with Python?</a>
-<br>
-<a href="bestide.html" onmouseover="set('Once and for all, THE BEST IDE')">What is the best IDE?</a> ~
-<a href="bestway.html" onmouseover="set('Some tips')">The best way to learn Python?</a>
-<!-- <a href="#" onmouseover="set('Fasten your seat belts')">How to master Python?</a> -->
-<br>
-<a href="freebooks.html" onmouseover="set('The truth about free books')">Free paid Python books?</a>
-<!--
-<a onmouseover="set('Hail teachers from India!')">Youtube Tutorials</a>
-<br>
-<a href="#" onmouseover="set('The winner can be only one, duh')">Django vs Flask</a>
-<br>
-<a>BeautifulSoup</a> ~ <a>Scrappy</a>
--->
+<div class="upperChangingText"><h2 id="tip">UwU</h2></div>
+<div class="content">
+	<a href="downloadPython.html" onmouseover="set('Basic installation guide')">WHERE CAN I GET PYTHON?</a>
+	<br>
+	<a href="pp.html" onmouseover="set('Don\'t tell me you closed it before reading...')">How can I see pinned message?</a>
+	<br>
+	<a href="hackfacebook.html" onmouseover="set('Real tips from real hackers')">How can I hack Facebook with Python?</a>
+	<br>
+	<a href="bestide.html" onmouseover="set('Once and for all, THE BEST IDE')">What is the best IDE?</a> ~
+	<a href="bestway.html" onmouseover="set('Some tips')">The best way to learn Python?</a>
+	<!-- <a href="#" onmouseover="set('Fasten your seat belts')">How to master Python?</a> -->
+	<br>
+	<a href="freebooks.html" onmouseover="set('The truth about free books')">Free paid Python books?</a>
+	<!--
+	<a onmouseover="set('Hail teachers from India!')">Youtube Tutorials</a>
+	<br>
+	<a href="#" onmouseover="set('The winner can be only one, duh')">Django vs Flask</a>
+	<br>
+	<a>BeautifulSoup</a> ~ <a>Scrappy</a>
+	-->
+</div>
+</div>
 </body>
 </html>
 <!-- Kat does not make bloated software -->
