--- a/pp.html
+++ b/pp.html
@@ -6,11 +6,14 @@
 </head>
 <body>
 <h1>The Ultimate Python Guide - Pinned Message</h1>
-<br>
-<p>I actually don't know what to do. Sorry</p>
-<p></p>
-<br>
-<a href="index.html">Go back</a>
+	<div class="content">
+		<p style="text-align: right;padding-right: 10%"><i>"Ask admins to tell you what pinned message says,<br>
+			since you frantically closed the pinned message cause you thought<br>
+			it was nothing but a welcome message"<br></i>
+						DAVID</p>
+		<br>
+		<a href="index.html">Go back</a>
+	</div>
 </body>
 </html>
 
