--- a/bestway.html
+++ b/bestway.html
@@ -13,6 +13,14 @@
 				One of them, is how did they gain such knowledge?<br>
 				The answer is simple<p>
 			<h1><a href="https://docs.python.org/3/" target="_blank">READ THE DOCS</a></h1>
+			<p>But seriously...<br>
+				I think the steps are quite easy</p>
+			<p>1) Look for <a href="https://www.youtube.com/results?search_query=python+full+course">youtube videos</a> about Python<br>
+				2)Try doing some <a href="https://www.hackerrank.com/domains/python">Python challenges!</a><br>
+				3)Look at <a href="https://stackoverflow.com/tags/python/info">Stack Overflow</a><br>
+				5)Start own project. (Ask in Python Offtopic for a challenge!)<br>
+				6)If you have a problem, use <a href="http://google.com">google</a><br>
+				</p>
 			<br>
 			<a href="index.html">Go back</a>
 		</div>
