--- a/downloadPython.html
+++ b/downloadPython.html
@@ -13,15 +13,41 @@
 			<div style="background-color: gray; margin: auto">
 			<b><a href="#" target="_blank" style="font-size: 40">www.python.org/download</a></b>
 			</div>	
-			<p>and click on a <b style="color: yellow">SHINY</b> button saying "Download python 3.7.2</p>
+			<p>and click on a <b style="color: yellow">SHINY</b> button saying "Download python 3.7.2"</p>
 			<p>Download Python</p>
 			<p>It will actually install Python, an IDE, and a lot of standard libraries</p>
-			<p>Quick check: press CTRL+R<br>
-				and type "python" (without the quotes)<br>
-				Got an error? You did something wrong.<br>
-				Do you see a black window? Congratulations.</p>
+			<p>After installation, you can do a quick check if Python works</p>
+			<br>
+			<div style="float: right; width: 50%">
+				<h3>Windows</h3>
+				<p>Press CTRL+R<br>
+					and type "python" (without the quotes)<br>
+					Got an error? You did something wrong.<br>
+					Do you see a black window? Congratulations.</p>
+			</div>
+			<div style="float: center; width: 50%">
+				<h3>Linux/MacOs</h3>
+				<p>Open your terminal<br>
+					and type "python" (without the quotes)<br>
+					Got an error? You did something wrong.<br>
+					">>>" before cursor? Congratulations.</p>
+			</div>
+			<br>
+			<div style="clear: both;">
+				<p>I have mentioned Standard Libraries.<br>
+				The list is actually massive.
+				<a href="https://docs.python.org/3/library/">Click here to check the list</a></p>
+				<p>We're all happy that you are willing to learn Python<br>
+					Please remember to use <a href="http://google.com">google</a> before asking<br>
+					questions on Telegram Python group</p>
+				<p>Remember to read the rules of our Group.<br>
+					Feel free to read "Free paid books" section on this website<br>
+					as it will provide you with a lot of knowledge!</p>
+			</div>
 			<br><br>
-			<a href="index.html">Go back</a>
+			<div style="clear: both;">
+				<a href="index.html">Go back</a>
+			</div>
 		</div>
 	</div>
 </body>
