--- a/downloadPython.html
+++ b/downloadPython.html
@@ -11,7 +11,7 @@
 			<p><i>"Ah so you want to start your journey with Python?"</i></p>
 			<br>
 			<div style="background-color: gray; margin: auto">
-			<b><a href="#" target="_blank" style="font-size: 40">www.python.org/download</a></b>
+			<b><a href="http://www.python.org/download" target="_blank" style="font-size: 40">www.python.org/download</a></b>
 			</div>	
 			<p>and click on a <b style="color: yellow">SHINY</b> button saying "Download python 3.7.2"</p>
 			<p>Download Python</p>
