--- a/downloadPython.html
+++ b/downloadPython.html
@@ -15,6 +15,8 @@
 			</div>	
 			<p>and click on a <b style="color: yellow">SHINY</b> button saying "Download python 3.7.2"</p>
 			<p>Download Python</p>
+			<p style="color: red;background-color: yellow;"><b>PLEASE <u><i>DO NOT</i></u> DOWNLOAD PYTHON 2!<br>
+				Python 3 is the python you want to learn!</b></p>
 			<p>It will actually install Python, an IDE, and a lot of standard libraries</p>
 			<p>After installation, you can do a quick check if Python works</p>
 			<br>
